docs:登录页更新、页面名称更新、查询器新增传参方式更新

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "imagegateway",
   "version": "1.0.0",
-  "description": "图像转发中间件管理",
+  "description": "无极云转发管理",
   "author": "YEZQ <497070595@qq.com>",
   "private": true,
   "scripts": {
